{
  "version": 4,
  "terraform_version": "1.14.9",
  "serial": 245,
  "lineage": "5f169490-8b20-f9db-d873-c3046a6e1871",
  "resources": [
    {
      "module": "module.nptel_chatbot",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:256211928684:security-group/sg-0c06da01a77c1163b",
            "description": "Security group for Lambda functions",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS to AWS services via VPC endpoints",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "PostgreSQL to RDS",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "id": "sg-0c06da01a77c1163b",
            "ingress": [],
            "name": "nptel-qa-iot-2026-lambda-sg",
            "name_prefix": "",
            "owner_id": "256211928684",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nptel-qa-iot-2026-lambda-sg"
            },
            "tags_all": {
              "Name": "nptel-qa-iot-2026-lambda-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0288dc55aa4568b5c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.nptel_chatbot.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.nptel_chatbot",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:256211928684:security-group/sg-0eae9f237e04eb299",
            "description": "Security group for Aurora PostgreSQL cluster",
            "egress": [],
            "id": "sg-0eae9f237e04eb299",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from Lambda",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c06da01a77c1163b"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "nptel-qa-iot-2026-rds-sg",
            "name_prefix": "",
            "owner_id": "256211928684",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nptel-qa-iot-2026-rds-sg"
            },
            "tags_all": {
              "Name": "nptel-qa-iot-2026-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0288dc55aa4568b5c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.nptel_chatbot.aws_security_group.lambda",
            "module.nptel_chatbot.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.nptel_chatbot",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:256211928684:subnet/subnet-05174dd1063a74429",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05174dd1063a74429",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "256211928684",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nptel-qa-iot-2026-private-1"
            },
            "tags_all": {
              "Name": "nptel-qa-iot-2026-private-1"
            },
            "vpc_id": "vpc-0288dc55aa4568b5c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.nptel_chatbot.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:256211928684:subnet/subnet-07cc90c5bdeb23773",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07cc90c5bdeb23773",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "256211928684",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nptel-qa-iot-2026-private-2"
            },
            "tags_all": {
              "Name": "nptel-qa-iot-2026-private-2"
            },
            "vpc_id": "vpc-0288dc55aa4568b5c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.nptel_chatbot.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.nptel_chatbot",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:256211928684:vpc/vpc-0288dc55aa4568b5c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b839a57c1ea6131d",
            "default_route_table_id": "rtb-015b469a11a562fae",
            "default_security_group_id": "sg-00f9b8cc4cb1005a5",
            "dhcp_options_id": "dopt-9eaadde4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0288dc55aa4568b5c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-015b469a11a562fae",
            "owner_id": "256211928684",
            "tags": {
              "Name": "nptel-qa-iot-2026-vpc"
            },
            "tags_all": {
              "Name": "nptel-qa-iot-2026-vpc"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}